[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/title_font.tres" type="DynamicFontData" id=1]
[ext_resource path="res://script/main_menu.gd" type="Script" id=2]



[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
margin_left = -216.0
margin_right = 232.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Larrikin Quest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButtons" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.55
anchor_right = 0.1
anchor_bottom = 0.6
margin_top = -75.0
margin_right = 172.0
margin_bottom = 75.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="Button" parent="MainMenuButtons"]
margin_right = 172.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="MainMenuButtons"]
margin_top = 32.0
margin_right = 172.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 3 )
text = "Continue"

[node name="Load Game" type="Button" parent="MainMenuButtons"]
margin_top = 64.0
margin_right = 172.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 4 )
text = "Load Game"

[node name="Options" type="Button" parent="MainMenuButtons"]
margin_top = 96.0
margin_right = 172.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 5 )
text = "Options"

[node name="Exit" type="Button" parent="MainMenuButtons"]
margin_top = 128.0
margin_right = 172.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 6 )
text = "Exit"
[connection signal="pressed" from="MainMenuButtons/New Game" to="." method="_on_Start_Game_pressed"]
[connection signal="pressed" from="MainMenuButtons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MainMenuButtons/Load Game" to="." method="_on_Load_Game_pressed"]
[connection signal="pressed" from="MainMenuButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MainMenuButtons/Exit" to="." method="_on_Exit_pressed"]
